--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 </div>
 
 <div class="feature" style="background: #fef9f5; padding: 2.5rem 2rem; border-radius: 16px; max-width: 1000px; margin: 3rem auto; box-shadow: 0 8px 20px rgba(0,0,0,0.04); text-align: center;">
-  <img src="https://res-console.cloudinary.com/dh7wg6jl2/thumbnails/v1/image/upload/v1749107485/MDBjNzcxMTMtNTBjOS00YzVkLTlkMGYtM2Q5MjE2YjVjNzdkX2lhN3l3aA==/drilldown" alt="Investasi Keiko Investama" style="max-width: 250px; border-radius: 12px; margin-bottom: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.08);">
+  <img src="https://res.cloudinary.com/dh7wg6jl2/image/upload/v1749107485/00c77113-50c9-4c5d-9d0f-3d9216b5c77d_ia7ywh.png" alt="Investasi Keiko Investama" style="max-width: 250px; border-radius: 12px; margin-bottom: 1rem; box-shadow: 0 4px 10px rgba(0,0,0,0.08);">
   
   <h2 style="color: #b45309; margin-bottom: 0.5rem;">Dukungan Investasi Strategis</h2>
   <p style="font-size: 1.05rem; color: #444; max-width: 750px; margin: 0 auto 1rem auto;">
